--- a/epynet_cps/main/main_experiment.yaml
+++ b/epynet_cps/main/main_experiment.yaml
@@ -4,6 +4,6 @@ meta-learning: false
 experiment_folder: 'exp_0'
 experiments:
     - env: 'env_config.yaml'
-      attacks_train: 'attackers_train.yaml'
+      attacks_train: null
       attacks_test: 'attackers_test.yaml'
-      output: '/results/attack_0'
+      output: 'results/attack_0'
