--- a/epynet_cps/main/main_experiment.yaml
+++ b/epynet_cps/main/main_experiment.yaml
@@ -1,9 +1,13 @@
+# In case of experiment with agent
 agent_class: DeepQNetwork
 agent_config: 'dqn_settings.yaml'
 meta-learning: false
+
+# With every type of simulation
 experiment_folder: 'exp_0'
 experiments:
     - env: 'env_config.yaml'
       attacks_train: null
       attacks_test: 'attackers_test.yaml'
-      output: 'results/attack_0'
+      output: 'results/trial_0'
+
