--- a/epynet_cps/experiments/exp_0/env_config.yaml
+++ b/epynet_cps/experiments/exp_0/env_config.yaml
@@ -6,14 +6,14 @@ hyd_step: 300       # 5 min
 pattern_step: 3600
 
 state_vars:
-    day:
-        bounds:
-            min: 1
-            max: 7
-    time:
-        bounds:
-            min: 0
-            max: 86400
+    #day:
+    #    bounds:
+    #        min: 1
+    #        max: 7
+    #time:
+    #    bounds:
+    #        min: 0
+    #        max: 86400
     T41:
         bounds:
             min: 3.048
