--- a/.gitignore
+++ b/.gitignore
@@ -279,6 +279,9 @@ cython_debug/
 # demand_generation
 demand_pattern_generator/*
 
+# shared files (dropbox)
+shared_files/*
+
 # saved model and logs
 *.msh
 *.log
