--- a/epynet_cps/experiments/exp_0/anytown_config.yaml
+++ b/epynet_cps/experiments/exp_0/anytown_config.yaml
@@ -42,16 +42,16 @@ action_vars:
     - 'P79'
 
 pattern_files:
-    train: 'anytown/demand_patterns_0-01_0-55_test.csv'
+    train: 'anytown/demand_patterns_0-01_0-55_train.csv'
     train_full_range: 'anytown/demand_patterns_train_full_range.csv'
     train_low: 'anytown/demand_patterns_train_low.csv'
-    test: 'anytown/demand_patterns_test_mixed.csv'
+    test: 'anytown/demand_patterns_0-01_0-55_test.csv'
 
 test_seeds:
     - 0
-    #- 1
-    #- 2
-    #- 3
+    - 1
+    - 2
+    - 3
 # update_every: 14400     # 4hours
 update_every: null
 
@@ -64,98 +64,108 @@ plcs:
     - name: PLC2
       type: sensor
       vars:
-        T41:
-            - pressure
-        J20:
-            - pressure
-            - demand
-            - basedemand
-        J21:
-            - pressure
-            - demand
-            - basedemand
-        J14:
-            - pressure
-            - demand
-            - basedemand
-        J2:
-            - pressure
-            - demand
-            - basedemand
-        J13:
-            - pressure
-            - demand
-            - basedemand
-        J1:
-            - pressure
-            - demand
-            - basedemand
-        J3:
-            - pressure
-            - demand
-            - basedemand
-        J6:
-            - pressure
-            - demand
-            - basedemand
-        J15:
-            - pressure
-            - demand
-            - basedemand
-        J5:
-            - pressure
-            - demand
-            - basedemand
-        J19:
-            - pressure
-            - demand
-            - basedemand
+        nodes:
+            T41:
+                - pressure
+            J20:
+                - pressure
+                - demand
+                - basedemand
+            J21:
+                - pressure
+                - demand
+                - basedemand
+            J14:
+                - pressure
+                - demand
+                - basedemand
+            J2:
+                - pressure
+                - demand
+                - basedemand
+            J13:
+                - pressure
+                - demand
+                - basedemand
+            J1:
+                - pressure
+                - demand
+                - basedemand
+            J3:
+                - pressure
+                - demand
+                - basedemand
+            J6:
+                - pressure
+                - demand
+                - basedemand
+            J15:
+                - pressure
+                - demand
+                - basedemand
+            J5:
+                - pressure
+                - demand
+                - basedemand
+            J19:
+                - pressure
+                - demand
+                - basedemand
+        links:
+            P78:
+                - status
+                - flow
     - name: PLC3
       type: sensor
       vars:
-        T42:
-            - pressure
-        J4:
-            - pressure
-            - demand
-            - basedemand
-        J18:
-            - pressure
-            - demand
-            - basedemand
-        J12:
-            - pressure
-            - demand
-            - basedemand
-        J7:
-            - pressure
-            - demand
-            - basedemand
-        J8:
-            - pressure
-            - demand
-            - basedemand
-        J16:
-            - pressure
-            - demand
-            - basedemand
-        J17:
-            - pressure
-            - demand
-            - basedemand
-        J11:
-            - pressure
-            - demand
-            - basedemand
-        J10:
-            - pressure
-            - demand
-            - basedemand
-        J9:
-            - pressure
-            - demand
-            - basedemand
-        J22:
-            - pressure
-            - demand
-            - basedemand
+        nodes:
+            T42:
+                - pressure
+            J4:
+                - pressure
+                - demand
+                - basedemand
+            J18:
+                - pressure
+                - demand
+                - basedemand
+            J12:
+                - pressure
+                - demand
+                - basedemand
+            J7:
+                - pressure
+                - demand
+                - basedemand
+            J8:
+                - pressure
+                - demand
+                - basedemand
+            J16:
+                - pressure
+                - demand
+                - basedemand
+            J17:
+                - pressure
+                - demand
+                - basedemand
+            J11:
+                - pressure
+                - demand
+                - basedemand
+            J10:
+                - pressure
+                - demand
+                - basedemand
+            J9:
+                - pressure
+                - demand
+                - basedemand
+            J22:
+                - pressure
+                - demand
+                - basedemand
+        links:
+            P79:
+                - status
+                - flow
