--- a/epynet_cps/main/agent/dqn_settings.yaml
+++ b/epynet_cps/main/agent/dqn_settings.yaml
@@ -3,7 +3,7 @@ agent:
     load_as: 'saved_models/overflow.msh'
     batch_size: 64
     target_update_frequency: 50
-    initial_replay_memory: 5000
+    initial_replay_memory: 50000
     max_replay_size: 100000
 
 nn:
@@ -13,6 +13,13 @@ optimizer:
     lr: .00025
 
 learning:
-    epochs: 1
-    train_episodes: 1
+    epochs: 5
+    train_episodes: 10
     train_frequency: 4
+
+results:
+    save_results: True
+    dataset: True
+    q_values: False
+    links_report: True
+    nodes_report: False
