--- a/epynet_cps/main/main_experiment.yaml
+++ b/epynet_cps/main/main_experiment.yaml
@@ -6,8 +6,8 @@ meta-learning: false
 # With every type of simulation
 experiment_folder: 'exp_0'
 experiments:
-    - env: 'env_config.yaml'
+    - env: 'anytown_config.yaml'
       attacks_train: null
-      attacks_test: 'attackers_test.yaml'
-      output: 'results/trial_0'
-
+      attacks_test: null
+      #attacks_test: 'attackers_test.yaml'
+      output_folder: 'results/trial_pump_status_issue'
