--- a/epynet_cps/main/agent/dqn_settings.yaml
+++ b/epynet_cps/main/agent/dqn_settings.yaml
@@ -1,6 +1,6 @@
 agent:
-    load: False
-    load_as: 'saved_models/overflow.msh'
+    load: True
+    load_as: 'saved_models/good_90_eps.msh'
     batch_size: 64
     target_update_frequency: 50
     initial_replay_memory: 5000
@@ -13,7 +13,7 @@ optimizer:
     lr: .00025
 
 learning:
-    epochs: 10
+    epochs: 0
     train_episodes: 10
     train_frequency: 4
 
@@ -23,3 +23,7 @@ results:
     q_values: False
     links_report: True
     nodes_report: False
+
+model:
+    save_model: False
+    save_as: 'good_90_eps'
