--- a/epynet_cps/main/main_experiment.yaml
+++ b/epynet_cps/main/main_experiment.yaml
@@ -4,10 +4,10 @@ agent_config: 'dqn_settings.yaml'
 meta-learning: false
 
 # With every type of simulation
-experiment_folder: 'exp_no_attacks'
+experiment_folder: 'exp_attacks_test_only'
 experiments:
     - env: 'anytown_config.yaml'
       attacks_train: null
-      attacks_test: null
-      #attacks_test: 'attackers_test.yaml'
-      output_folder: 'results/andres_100_episodes'
+      #attacks_test: null
+      attacks_test: 'attackers_test.yaml'
+      output_folder: 'results/good_90_eps_attacks'
