--- a/epynet_cps/main/agent/dqn_settings.yaml
+++ b/epynet_cps/main/agent/dqn_settings.yaml
@@ -1,5 +1,5 @@
 agent:
-    load: True
+    load: False
     load_as: 'saved_models/good_90_eps.msh'
     batch_size: 64
     target_update_frequency: 50
@@ -13,7 +13,7 @@ optimizer:
     lr: .00025
 
 learning:
-    epochs: 0
+    epochs: 15
     train_episodes: 10
     train_frequency: 4
 
@@ -25,5 +25,5 @@ results:
     nodes_report: False
 
 model:
-    save_model: False
-    save_as: 'good_90_eps'
+    save_model: True
+    save_as: 'good_150_eps_train_attacks'
