--- a/epynet_cps/main/agent/dqn_settings.yaml
+++ b/epynet_cps/main/agent/dqn_settings.yaml
@@ -3,6 +3,7 @@ agent:
     load_as: 'saved_models/good_90_eps.msh'
     batch_size: 64
     target_update_frequency: 50
+    #initial_replay_memory: 50
     initial_replay_memory: 5000
     max_replay_size: 100000
 
@@ -12,9 +13,10 @@ nn:
 optimizer:
     lr: .00025
 
+# Training schedule
 learning:
-    epochs: 15
-    train_episodes: 10
+    epochs: 40
+    train_episodes: 5
     train_frequency: 4
 
 results:
@@ -26,4 +28,4 @@ results:
 
 model:
     save_model: True
-    save_as: 'good_150_eps_train_attacks'
+    save_as: '200_eps'
